name: 
  appdb
version:
  0.1.0.0
build-type:
  Simple
cabal-version:
  >=2
license:
  PublicDomain

library
  hs-source-dirs:
    lib
  default-language:
    Haskell2010
  exposed-modules:
    AppDb.Session
  other-modules:
    AppDb.Prelude
    AppDb.Statement
    AppDb.Transaction
  build-depends:
    hasql >=1.4 && <1.5,
    hasql-transaction >=0.10 && <0.11,
    rerebase >=1.4 && <1.5
  default-extensions:
    ApplicativeDo,
    Arrows,
    BangPatterns,
    BinaryLiterals,
    BlockArguments,
    ConstraintKinds,
    DataKinds,
    DefaultSignatures,
    DeriveDataTypeable,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    EmptyDataDecls,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTs,
    GeneralizedNewtypeDeriving,
    HexFloatLiterals,
    LambdaCase,
    LiberalTypeSynonyms,
    MagicHash,
    MultiParamTypeClasses,
    MultiWayIf,
    NoImplicitPrelude,
    NoMonomorphismRestriction,
    NumericUnderscores,
    OverloadedStrings,
    PatternGuards,
    PatternSynonyms,
    ParallelListComp,
    QuasiQuotes,
    RankNTypes,
    RecordWildCards,
    ScopedTypeVariables,
    StandaloneDeriving,
    StrictData,
    TemplateHaskell,
    TupleSections,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    UnboxedTuples
